@@ -1,660 +1,108 @@
-#!/bin/bash
+#!/usr/bin/env bash
+set -euo pipefail
 
-# Скрипт для запуска юнит-тестов ToDo List Application
+PROJECT_ROOT="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
+cd "$PROJECT_ROOT"
 
-
-echo " Запуск юнит-тестов ToDo List Application..."
-echo "================================================"
-
-# Настройки
-PROJECT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
-SRC_DIR="$PROJECT_DIR/src"
-BIN_DIR="$PROJECT_DIR/bin"
-TESTS_DIR="$PROJECT_DIR/tests"
-REPORTS_DIR="$TESTS_DIR/reports"
+SRC_DIR="$PROJECT_ROOT/src"
+BIN_DIR="$PROJECT_ROOT/bin"
+TESTS_DIR="$PROJECT_ROOT/tests"
 CLASSES_DIR="$TESTS_DIR/classes"
-LIB_DIR="$TESTS_DIR/lib"
-JAVAFX_PATH="../javafx-sdk-25.0.1/lib"
+REPORTS_DIR="$TESTS_DIR/reports"
+LIB_DIR="$PROJECT_ROOT/lib"
 
-# Создаем директории для отчетов и классов
-mkdir -p "$REPORTS_DIR"
-mkdir -p "$CLASSES_DIR"
-mkdir -p "$REPORTS_DIR/coverage"
+JUNIT_VERSION="1.9.2"
+JUNIT_DIR="$TESTS_DIR/lib"
+JUNIT_JAR="$JUNIT_DIR/junit-platform-console-standalone-${JUNIT_VERSION}.jar"
 
-# Текущая дата для отчета
-CURRENT_DATE=$(date "+%Y-%m-%d %H:%M:%S")
+mkdir -p "$CLASSES_DIR" "$REPORTS_DIR" "$JUNIT_DIR"
 
-# Инициализация счетчиков
-TOTAL_TESTS=0
-PASSED_TESTS=0
-FAILED_TESTS=0
-SKIPPED_TESTS=0
-START_TIME=$(date +%s)
-
-# Проверка наличия JUnit библиотек
-echo "🔍 Проверка зависимостей..."
-if [ ! -f "$LIB_DIR/junit-platform-console-standalone-1.9.2.jar" ]; then
-    echo "⚠️  JUnit библиотеки не найдены в $LIB_DIR/"
-    echo "📥 Скачивание JUnit 5..."
-    
-    mkdir -p "$LIB_DIR"
-    cd "$LIB_DIR"
-    
-    # Скачиваем JUnit 5
-    curl -L -o junit-platform-console-standalone-1.9.2.jar \
-         https://repo1.maven.org/maven2/org/junit/platform/junit-platform-console-standalone/1.9.2/junit-platform-console-standalone-1.9.2.jar 2>/dev/null
-    
-    if [ $? -ne 0 ]; then
-        echo "❌ Не удалось скачать JUnit библиотеки"
-        echo "📝 Используем упрощенный тестовый раннер"
-        # Создаем простой тестовый раннер если JUnit не доступен
-        cat > SimpleTestRunner.java << 'EOF'
-import java.io.File;
-import java.lang.reflect.Method;
-import java.net.URL;
-import java.net.URLClassLoader;
-import java.util.ArrayList;
-import java.util.List;
-
-public class SimpleTestRunner {
-    public static void main(String[] args) throws Exception {
-        String testDir = "tests/classes";
-        File classesDir = new File(testDir);
-        
-        if (!classesDir.exists()) {
-            System.out.println("❌ Директория с тестами не найдена: " + testDir);
-            System.exit(1);
-        }
-        
-        URL[] urls = {classesDir.toURI().toURL()};
-        URLClassLoader classLoader = new URLClassLoader(urls, SimpleTestRunner.class.getClassLoader());
-        
-        int total = 0;
-        int passed = 0;
-        int failed = 0;
-        
-        List<File> testFiles = findTestFiles(classesDir);
-        System.out.println("Найдено тестовых классов: " + testFiles.size());
-        
-        for (File file : testFiles) {
-            String className = file.getPath()
-                .replace(testDir + File.separator, "")
-                .replace(".class", "")
-                .replace(File.separator, ".");
-            
-            try {
-                Class<?> testClass = classLoader.loadClass(className);
-                System.out.println("\n🔍 Тестируем: " + className);
-                
-                // Ищем методы с @Test
-                for (Method method : testClass.getDeclaredMethods()) {
-                    if (method.getName().startsWith("test") || 
-                        method.isAnnotationPresent(org.junit.jupiter.api.Test.class)) {
-                        total++;
-                        System.out.print("  • " + method.getName() + ": ");
-                        
-                        try {
-                            Object instance = testClass.getDeclaredConstructor().newInstance();
-                            method.invoke(instance);
-                            System.out.println("✅ УСПЕХ");
-                            passed++;
-                        } catch (Exception e) {
-                            System.out.println("❌ ОШИБКА: " + e.getCause().getMessage());
-                            failed++;
-                        }
-                    }
-                }
-            } catch (Exception e) {
-                System.out.println("⚠️  Ошибка загрузки класса " + className + ": " + e.getMessage());
-            }
-        }
-        
-        System.out.println("\n================================================");
-        System.out.println("📊 ИТОГИ:");
-        System.out.println("   Всего тестов: " + total);
-        System.out.println("   Успешно:      " + passed);
-        System.out.println("   Провалено:    " + failed);
-        System.out.println("================================================");
-        
-        System.exit(failed > 0 ? 1 : 0);
-    }
-    
-    private static List<File> findTestFiles(File dir) {
-        List<File> testFiles = new ArrayList<>();
-        File[] files = dir.listFiles();
-        
-        if (files != null) {
-            for (File file : files) {
-                if (file.isDirectory()) {
-                    testFiles.addAll(findTestFiles(file));
-                } else if (file.getName().endsWith("Test.class")) {
-                    testFiles.add(file);
-                }
-            }
-        }
-        
-        return testFiles;
-    }
+resolve_javafx_lib() {
+  if [[ -n "${JAVAFX_HOME:-}" && -d "${JAVAFX_HOME}/lib" ]]; then
+    echo "${JAVAFX_HOME}/lib"
+    return
+  fi
+  if [[ -d ".javafx/lib" ]]; then
+    echo ".javafx/lib"
+    return
+  fi
+  local candidate
+  candidate="$(ls -d javafx-sdk-* 2>/dev/null | sort -V | tail -n 1 || true)"
+  if [[ -n "$candidate" && -d "$candidate/lib" ]]; then
+    if [[ ! -e ".javafx" ]]; then
+      ln -sfn "$candidate" ".javafx"
+    fi
+    echo ".javafx/lib"
+    return
+  fi
+  echo ""
 }
-EOF
-        javac SimpleTestRunner.java
-        echo "✅ Создан простой тестовый раннер"
-    fi
-    
-    cd "$PROJECT_DIR"
+
+JAVAFX_LIB="$(resolve_javafx_lib)"
+if [[ -z "$JAVAFX_LIB" ]]; then
+  echo "[tests] JavaFX SDK not found. Set JAVAFX_HOME or place javafx-sdk-<version> in project root."
+  exit 1
 fi
 
-JUNIT_JAR="$LIB_DIR/junit-platform-console-standalone-1.9.2.jar"
-
-# Проверяем наличие скомпилированных классов приложения
-echo "🔍 Проверка скомпилированных классов приложения..."
-if [ ! -d "$BIN_DIR" ] || [ -z "$(ls -A $BIN_DIR 2>/dev/null)" ]; then
-    echo "⚠️  Классы приложения не скомпилированы"
-    echo "🛠️  Компиляция приложения..."
-    
-    # Находим все Java файлы
-    JAVA_FILES=$(find "$SRC_DIR" -name "*.java")
-    
-    if [ -z "$JAVA_FILES" ]; then
-        echo "❌ Java файлы не найдены в $SRC_DIR/"
-        exit 1
-    fi
-    
-    # Компилируем приложение
-    echo "Компилирую приложение..."
-    javac --module-path "$JAVAFX_PATH" \
-          --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.base \
-          -d "$BIN_DIR" \
-          $(find "$SRC_DIR" -name "*.java") 2>&1 | tee "$REPORTS_DIR/compile_app.log"
-    
-    if [ $? -ne 0 ]; then
-        echo "❌ Ошибка компиляции приложения"
-        echo "📝 Смотрите лог: $REPORTS_DIR/compile_app.log"
-        exit 1
-    fi
-    
-    echo "✅ Приложение успешно скомпилировано"
+OS="$(uname -s 2>/dev/null || echo UNKNOWN)"
+if [[ "$OS" == MINGW* || "$OS" == MSYS* || "$OS" == CYGWIN* ]]; then
+  CP_SEP=';'
+else
+  CP_SEP=':'
 fi
 
-# Поиск тестовых классов
-echo "🔍 Поиск тестовых классов..."
-TEST_FILES=$(find "$TESTS_DIR" -name "*Test.java" -type f)
+if [[ ! -f "$LIB_DIR/gson-2.10.1.jar" || ! -f "$LIB_DIR/sqlite-jdbc-3.45.1.0.jar" || ! -f "$LIB_DIR/slf4j-api-2.0.12.jar" || ! -f "$LIB_DIR/slf4j-nop-2.0.12.jar" ]]; then
+  echo "[tests] Required jars missing in lib/. Run: ./scripts/setup.sh"
+  exit 1
+fi
 
-if [ -z "$TEST_FILES" ]; then
-    echo "⚠️  Тестовые файлы не найдены"
-    echo "📁 Структура каталогов:"
-    find "$TESTS_DIR" -type f -name "*.java" | sed 's|^|   |'
+if [[ ! -f "$JUNIT_JAR" ]]; then
+  echo "[tests] Downloading JUnit console..."
+  if command -v curl >/dev/null 2>&1; then
+    curl -L --fail "https://repo1.maven.org/maven2/org/junit/platform/junit-platform-console-standalone/${JUNIT_VERSION}/junit-platform-console-standalone-${JUNIT_VERSION}.jar" \
+      -o "$JUNIT_JAR"
+  else
+    echo "[tests] curl not found. Download JUnit manually: $JUNIT_JAR"
     exit 1
+  fi
 fi
 
-echo "📋 Найдено тестовых файлов: $(echo "$TEST_FILES" | wc -l)"
+./scripts/run.sh --build-only
 
-# Создаем список тестовых классов
-TEST_CLASSES=""
-for TEST_FILE in $TEST_FILES; do
-    # Преобразуем путь к файлу в имя класса
-    REL_PATH="${TEST_FILE#$TESTS_DIR/}"
-    CLASS_NAME="${REL_PATH%.java}"
-    CLASS_NAME="${CLASS_NAME//\//.}"
-    
-    if [[ "$CLASS_NAME" == integration.* ]] || [[ "$CLASS_NAME" == unit.* ]]; then
-        TEST_CLASSES="$TEST_CLASSES $CLASS_NAME"
-        echo "  • $CLASS_NAME"
-    fi
-done
+TEST_SOURCES_LIST="$REPORTS_DIR/test-sources.list"
+find "$TESTS_DIR" -name "*Test.java" -type f | sort > "$TEST_SOURCES_LIST"
 
-if [ -z "$TEST_CLASSES" ]; then
-    echo "❌ Не найдено тестовых классов в пакетах unit.* или integration.*"
-    exit 1
+if [[ ! -s "$TEST_SOURCES_LIST" ]]; then
+  echo "[tests] No test sources found in $TESTS_DIR"
+  exit 1
 fi
 
-echo ""
-echo "🛠️  Компиляция тестов..."
-echo "-----------------------"
+echo "[tests] Compiling tests..."
 
-# Компилируем все тестовые файлы с обработкой ошибок
-COMPILE_LOG="$REPORTS_DIR/compile_tests.log"
-echo "Лог компиляции: $COMPILE_LOG"
+javac \
+  --module-path "$JAVAFX_LIB" \
+  --add-modules javafx.controls,javafx.fxml,javafx.media \
+  -cp "$BIN_DIR${CP_SEP}$JUNIT_JAR${CP_SEP}$LIB_DIR/gson-2.10.1.jar${CP_SEP}$LIB_DIR/sqlite-jdbc-3.45.1.0.jar${CP_SEP}$LIB_DIR/slf4j-api-2.0.12.jar${CP_SEP}$LIB_DIR/slf4j-nop-2.0.12.jar" \
+  -d "$CLASSES_DIR" \
+  @"$TEST_SOURCES_LIST"
 
-# Сначала компилируем без проблемных файлов
-echo "1. Компилируем базовые тесты..."
-javac -cp "$BIN_DIR:$JUNIT_JAR:$JAVAFX_PATH/*" \
-      -d "$CLASSES_DIR" \
-      $(find "$TESTS_DIR" -name "*Test.java" ! -name "JsonIntegrationTest.java") \
-      2>&1 | tee "$COMPILE_LOG"
-
-COMPILE_STATUS=$?
-
-# Если есть ошибки, пытаемся исправить проблемные файлы
-if [ $COMPILE_STATUS -ne 0 ]; then
-    echo "⚠️  Есть ошибки компиляции. Пытаюсь исправить..."
-    
-    # Создаем исправленную версию JsonIntegrationTest
-    if grep -q "JsonIntegrationTest" "$COMPILE_LOG"; then
-        echo "🛠️  Исправляю JsonIntegrationTest.java..."
-        
-        # Создаем временный исправленный файл
-        cat > "$TESTS_DIR/integration/JsonIntegrationTest_fixed.java" << 'EOF'
-package integration;
-
-import org.junit.jupiter.api.*;
-import org.junit.jupiter.api.io.TempDir;
-
-import model.Task;
-import model.Priority;
-import model.Category;
-
-import java.io.IOException;
-import java.nio.file.*;
-import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.List;
-
-import static org.junit.jupiter.api.Assertions.*;
-
-/**
- * Упрощенная версия интеграционного теста
- */
-public class JsonIntegrationTest_fixed {
-    
-    @TempDir
-    Path tempDir;
-    
-    @Test
-    @DisplayName("Простой тест создания задачи")
-    void testSimpleTaskCreation() {
-        Task task = new Task(
-            "Тестовая задача",
-            "Описание тестовой задачи",
-            LocalDateTime.now(),
-            LocalDateTime.now().plusDays(1),
-            Priority.IMPORTANT,
-            Category.WORK
-        );
-        
-        assertNotNull(task, "Задача должна быть создана");
-        assertNotNull(task.getId(), "У задачи должен быть ID");
-        assertEquals("Тестовая задача", task.getTitle());
-        assertEquals(Priority.IMPORTANT, task.getPriority());
-        assertEquals(Category.WORK, task.getCategory());
-        assertFalse(task.isCompleted(), "Новая задача не должна быть выполнена");
-    }
-    
-    @Test
-    @DisplayName("Тест JSON сериализации")
-    void testJsonSerialization() {
-        Task task = new Task(
-            "JSON тест",
-            "Проверка JSON формата",
-            LocalDateTime.of(2025, 1, 15, 9, 0, 0),
-            LocalDateTime.of(2025, 1, 15, 18, 0, 0),
-            Priority.URGENT,
-            Category.STUDY
-        );
-        
-        String json = task.toJsonString();
-        assertNotNull(json, "JSON не должен быть null");
-        assertTrue(json.contains("JSON тест"), "JSON должен содержать заголовок");
-        assertTrue(json.contains("URGENT"), "JSON должен содержать приоритет");
-        assertTrue(json.contains("2025-01-15"), "JSON должен содержать дату");
-    }
-    
-    @Test
-    @DisplayName("Тест приоритетов")
-    void testPriorityOrder() {
-        // URGENT должен быть более важным чем IMPORTANT
-        // IMPORTANT должен быть более важным чем NORMAL
-        
-        Task urgentTask = new Task("Срочно", "", 
-            LocalDateTime.now(), LocalDateTime.now().plusDays(1),
-            Priority.URGENT, Category.WORK);
-        
-        Task importantTask = new Task("Важно", "",
-            LocalDateTime.now(), LocalDateTime.now().plusDays(1),
-            Priority.IMPORTANT, Category.WORK);
-        
-        Task normalTask = new Task("Нормально", "",
-            LocalDateTime.now(), LocalDateTime.now().plusDays(1),
-            Priority.NORMAL, Category.WORK);
-        
-        assertEquals(Priority.URGENT, urgentTask.getPriority());
-        assertEquals(Priority.IMPORTANT, importantTask.getPriority());
-        assertEquals(Priority.NORMAL, normalTask.getPriority());
-        
-        // Проверяем цвета приоритетов
-        assertEquals("#FF4444", Priority.URGENT.getColor());
-        assertEquals("#FFBB33", Priority.IMPORTANT.getColor());
-        assertEquals("#00C851", Priority.NORMAL.getColor());
-    }
-    
-    @Test
-    @DisplayName("Тест категорий")
-    void testCategories() {
-        assertEquals("Работа", Category.WORK.getDisplayName());
-        assertEquals("Дом", Category.HOME.getDisplayName());
-        assertEquals("Учёба", Category.STUDY.getDisplayName());
-        assertEquals("Другое", Category.OTHER.getDisplayName());
-        
-        // Проверяем преобразование из строки
-        assertEquals(Category.WORK, Category.fromDisplayName("Работа"));
-        assertEquals(Category.HOME, Category.fromDisplayName("Дом"));
-        assertEquals(Category.OTHER, Category.fromDisplayName("Неизвестная"));
-    }
-    
-    @Test
-    @DisplayName("Тест просроченности задач")
-    void testTaskOverdue() {
-        // Просроченная задача
-        Task overdueTask = new Task(
-            "Просроченная",
-            "Должна быть просрочена",
-            LocalDateTime.now().minusDays(3),
-            LocalDateTime.now().minusDays(1), // Дедлайн в прошлом
-            Priority.IMPORTANT,
-            Category.WORK
-        );
-        
-        overdueTask.checkOverdue();
-        assertTrue(overdueTask.isOverdue(), "Задача должна быть просрочена");
-        
-        // Непросроченная задача
-        Task notOverdueTask = new Task(
-            "Не просроченная",
-            "Не должна быть просрочена",
-            LocalDateTime.now(),
-            LocalDateTime.now().plusDays(1), // Дедлайн в будущем
-            Priority.IMPORTANT,
-            Category.WORK
-        );
-        
-        notOverdueTask.checkOverdue();
-        assertFalse(notOverdueTask.isOverdue(), "Задача не должна быть просрочена");
-        
-        // Выполненная задача не может быть просрочена
-        Task completedTask = new Task(
-            "Выполненная",
-            "Даже с просроченным дедлайном",
-            LocalDateTime.now().minusDays(3),
-            LocalDateTime.now().minusDays(1),
-            Priority.IMPORTANT,
-            Category.WORK
-        );
-        
-        completedTask.setCompleted(true);
-        completedTask.checkOverdue();
-        assertFalse(completedTask.isOverdue(), "Выполненная задача не может быть просрочена");
-    }
-}
-EOF
-        
-        # Компилируем исправленный файл
-        javac -cp "$BIN_DIR:$JUNIT_JAR:$JAVAFX_PATH/*" \
-              -d "$CLASSES_DIR" \
-              "$TESTS_DIR/integration/JsonIntegrationTest_fixed.java" \
-              2>&1 | tee -a "$COMPILE_LOG"
-        
-        if [ $? -eq 0 ]; then
-            echo "✅ JsonIntegrationTest_fixed успешно скомпилирован"
-            # Переименовываем класс для запуска
-            mv "$CLASSES_DIR/integration/JsonIntegrationTest_fixed.class" \
-               "$CLASSES_DIR/integration/JsonIntegrationTest.class" 2>/dev/null || true
-        fi
-    fi
-    
-    # Пробуем скомпилировать остальные файлы по одному
-    echo "2. Компилируем тесты по одному..."
-    for TEST_FILE in $TEST_FILES; do
-        if [[ "$TEST_FILE" != *"JsonIntegrationTest.java" ]]; then
-            echo "  Компилирую: $(basename $TEST_FILE)"
-            javac -cp "$BIN_DIR:$JUNIT_JAR:$JAVAFX_PATH/*" \
-                  -d "$CLASSES_DIR" \
-                  "$TEST_FILE" 2>&1 | grep -E "error:|warning:" || true
-        fi
-    done
-fi
-
-# Проверяем, есть ли скомпилированные тесты
-if [ ! -d "$CLASSES_DIR" ] || [ -z "$(ls -A $CLASSES_DIR 2>/dev/null)" ]; then
-    echo "❌ Нет скомпилированных тестов"
-    echo "📝 Создаю простые тесты для демонстрации..."
-    
-    # Создаем простые тесты
-    mkdir -p "$CLASSES_DIR/unit/model"
-    mkdir -p "$CLASSES_DIR/unit/util"
-    
-    cat > "$CLASSES_DIR/SimpleTest.java" << 'EOF'
-import java.time.LocalDateTime;
-
-public class SimpleTest {
-    public static void main(String[] args) {
-        System.out.println("🧪 Простые тесты ToDo List");
-        System.out.println("==========================");
-        
-        int total = 0;
-        int passed = 0;
-        
-        // Тест 1: Проверка создания задачи
-        try {
-            total++;
-            System.out.print("1. Создание задачи: ");
-            // Здесь был бы тест с использованием ваших классов
-            System.out.println("✅ УСПЕХ (пропущено - нужны классы модели)");
-            passed++;
-        } catch (Exception e) {
-            System.out.println("❌ ОШИБКА: " + e.getMessage());
-        }
-        
-        // Тест 2: Проверка приоритетов
-        try {
-            total++;
-            System.out.print("2. Проверка приоритетов: ");
-            // Тест приоритетов
-            System.out.println("✅ УСПЕХ (пропущено)");
-            passed++;
-        } catch (Exception e) {
-            System.out.println("❌ ОШИБКА: " + e.getMessage());
-        }
-        
-        // Тест 3: Проверка JSON формата
-        try {
-            total++;
-            System.out.print("3. Проверка JSON формата: ");
-            // Тест JSON
-            System.out.println("✅ УСПЕХ (пропущено)");
-            passed++;
-        } catch (Exception e) {
-            System.out.println("❌ ОШИБКА: " + e.getMessage());
-        }
-        
-        System.out.println("\n📊 ИТОГИ:");
-        System.out.println("   Всего тестов: " + total);
-        System.out.println("   Успешно:      " + passed);
-        System.out.println("   Провалено:    " + (total - passed));
-        
-        System.exit((total - passed) > 0 ? 1 : 0);
-    }
-}
-EOF
-    
-    javac -cp "$BIN_DIR" -d "$CLASSES_DIR" "$CLASSES_DIR/SimpleTest.java"
-    
-    echo "✅ Созданы простые демо-тесты"
-fi
-
-echo "✅ Компиляция завершена"
-
-echo ""
-echo "🚀 Запуск тестов..."
-echo "-------------------"
-
-# Файл для результатов
 RESULTS_FILE="$REPORTS_DIR/test_results_$(date +%Y%m%d_%H%M%S).txt"
 
-# Запускаем тесты разными способами в зависимости от доступности JUnit
-if [ -f "$JUNIT_JAR" ]; then
-    echo "Использую JUnit для запуска тестов..."
-    
-    # Собираем classpath
-    CLASSPATH="$BIN_DIR:$CLASSES_DIR:$JUNIT_JAR:$JAVAFX_PATH/*"
-    
-    # Запускаем через JUnit Console Launcher
-    java -cp "$CLASSPATH" \
-         org.junit.platform.console.ConsoleLauncher \
-         --scan-class-path \
-         --class-path "$BIN_DIR:$CLASSES_DIR" \
-         --details=tree \
-         --disable-banner \
-         2>&1 | tee "$RESULTS_FILE"
-    
-    RUN_STATUS=$?
-else
-    echo "Использую простой тестовый раннер..."
-    
-    if [ -f "$LIB_DIR/SimpleTestRunner.class" ]; then
-        CLASSPATH="$BIN_DIR:$CLASSES_DIR:$LIB_DIR"
-        java -cp "$CLASSPATH" SimpleTestRunner 2>&1 | tee "$RESULTS_FILE"
-        RUN_STATUS=$?
-    else
-        # Запускаем наш простой тест
-        CLASSPATH="$BIN_DIR:$CLASSES_DIR"
-        java -cp "$CLASSPATH" SimpleTest 2>&1 | tee "$RESULTS_FILE"
-        RUN_STATUS=$?
-    fi
-fi
+echo "[tests] Running JUnit..."
 
-# Парсим результаты
-echo ""
-echo " Анализ результатов..."
-echo "----------------------"
+java \
+  --module-path "$JAVAFX_LIB" \
+  --add-modules javafx.controls,javafx.fxml,javafx.media \
+  --enable-native-access=javafx.graphics \
+  -cp "$BIN_DIR${CP_SEP}$CLASSES_DIR${CP_SEP}$JUNIT_JAR${CP_SEP}$LIB_DIR/gson-2.10.1.jar${CP_SEP}$LIB_DIR/sqlite-jdbc-3.45.1.0.jar${CP_SEP}$LIB_DIR/slf4j-api-2.0.12.jar${CP_SEP}$LIB_DIR/slf4j-nop-2.0.12.jar" \
+  org.junit.platform.console.ConsoleLauncher \
+  --scan-class-path \
+  --class-path "$BIN_DIR${CP_SEP}$CLASSES_DIR" \
+  --details=tree \
+  --disable-banner \
+  2>&1 | tee "$RESULTS_FILE"
 
-# Извлекаем статистику
-if [ -f "$JUNIT_JAR" ] && [ $RUN_STATUS -eq 0 ]; then
-    # Парсим вывод JUnit
-    TOTAL_TESTS=$(grep -oE '[0-9]+ tests found' "$RESULTS_FILE" | grep -oE '[0-9]+' | head -1 || echo "0")
-    PASSED_TESTS=$(grep -oE '[0-9]+ tests successful' "$RESULTS_FILE" | grep -oE '[0-9]+' | head -1 || echo "0")
-    FAILED_TESTS=$(grep -oE '[0-9]+ tests failed' "$RESULTS_FILE" | grep -oE '[0-9]+' | head -1 || echo "0")
-    SKIPPED_TESTS=$(grep -oE '[0-9]+ tests aborted' "$RESULTS_FILE" | grep -oE '[0-9]+' | head -1 || echo "0")
-else
-    # Парсим простой вывод
-    TOTAL_TESTS=$(grep -c "✅\|❌" "$RESULTS_FILE" 2>/dev/null || echo "0")
-    PASSED_TESTS=$(grep -c "✅" "$RESULTS_FILE" 2>/dev/null || echo "0")
-    FAILED_TESTS=$(grep -c "❌" "$RESULTS_FILE" 2>/dev/null || echo "0")
-    SKIPPED_TESTS=0
-fi
+EXIT_CODE=${PIPESTATUS[0]}
 
-# Если не нашли тестов, используем эвристики
-if [ "$TOTAL_TESTS" -eq 0 ]; then
-    TOTAL_TESTS=$(grep -i "test" "$RESULTS_FILE" | wc -l || echo "0")
-    PASSED_TESTS=$(grep -i "success\|passed\|успех" "$RESULTS_FILE" | wc -l || echo "0")
-    FAILED_TESTS=$(grep -i "fail\|error\|ошибка" "$RESULTS_FILE" | wc -l || echo "0")
-fi
-
-# Рассчитываем общее время
-END_TIME=$(date +%s)
-EXECUTION_TIME=$((END_TIME - START_TIME))
-
-# Рассчитываем процент успеха
-if [ "$TOTAL_TESTS" -gt 0 ]; then
-    SUCCESS_RATE=$((PASSED_TESTS * 100 / TOTAL_TESTS))
-else
-    SUCCESS_RATE=0
-fi
-
-# Генерируем простой отчет
-echo ""
-echo "================================================"
-echo " ИТОГИ ТЕСТИРОВАНИЯ:"
-echo "================================================"
-echo "      Всего тестов:   $TOTAL_TESTS"
-echo "      Успешно:        $PASSED_TESTS"
-echo "      Провалено:      $FAILED_TESTS"
-echo "      Пропущено:      $SKIPPED_TESTS"
-echo "      Успешность:     ${SUCCESS_RATE}%"
-echo "      Время:          ${EXECUTION_TIME} секунд"
-echo "================================================"
-echo ""
-echo " Логи сохранены: $RESULTS_FILE"
-echo "================================================"
-
-# Создаем простой HTML отчет
-cat > "$REPORTS_DIR/simple-report.html" << EOF
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>Тестовый отчет - ToDo List</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 40px; }
-        .header { background: #4CAF50; color: white; padding: 20px; border-radius: 5px; }
-        .stats { margin: 20px 0; }
-        .stat-item { display: inline-block; margin: 10px 20px; padding: 15px; border-radius: 5px; }
-        .total { background: #2196F3; color: white; }
-        .passed { background: #4CAF50; color: white; }
-        .failed { background: #f44336; color: white; }
-        .skipped { background: #ff9800; color: white; }
-        .rate { background: #9C27B0; color: white; }
-        .logs { background: #f5f5f5; padding: 20px; border-radius: 5px; margin-top: 20px; }
-    </style>
-</head>
-<body>
-    <div class="header">
-        <h1>🧪 Тестовый отчет - ToDo List Application</h1>
-        <p>Дата: $CURRENT_DATE | Время выполнения: ${EXECUTION_TIME}с</p>
-    </div>
-    
-    <div class="stats">
-        <div class="stat-item total">
-            <h3>Всего тестов</h3>
-            <h2>$TOTAL_TESTS</h2>
-        </div>
-        
-        <div class="stat-item passed">
-            <h3>Успешно</h3>
-            <h2>$PASSED_TESTS</h2>
-        </div>
-        
-        <div class="stat-item failed">
-            <h3>Провалено</h3>
-            <h2>$FAILED_TESTS</h2>
-        </div>
-        
-        <div class="stat-item skipped">
-            <h3>Пропущено</h3>
-            <h2>$SKIPPED_TESTS</h2>
-        </div>
-        
-        <div class="stat-item rate">
-            <h3>Успешность</h3>
-            <h2>${SUCCESS_RATE}%</h2>
-        </div>
-    </div>
-    
-    <div class="logs">
-        <h3>Последние логи:</h3>
-        <pre>$(tail -20 "$RESULTS_FILE" 2>/dev/null || echo "Нет логов")</pre>
-        <p><a href="$(basename "$RESULTS_FILE")">Полные логи</a></p>
-    </div>
-</body>
-</html>
-EOF
-
-echo "📄 Простой HTML отчет: $REPORTS_DIR/simple-report.html"
-
-# Возвращаем код выхода
-if [ "$FAILED_TESTS" -eq 0 ] && [ "$TOTAL_TESTS" -gt 0 ]; then
-    echo ""
-    echo "ТЕСТИРОВАНИЕ ЗАВЕРШЕНО УСПЕШНО!"
-    exit 0
-elif [ "$TOTAL_TESTS" -eq 0 ]; then
-    echo ""
-    echo "⚠️  НЕ УДАЛОСЬ ЗАПУСТИТЬ ТЕСТЫ!"
-    echo "   Проверьте:"
-    echo "   1. Есть ли скомпилированные классы в bin/"
-    echo "   2. Правильность тестовых классов"
-    echo "   3. Ошибки компиляции в $COMPILE_LOG"
-    exit 1
-else
-    echo ""
-    echo "⚠️  ЕСТЬ ПРОБЛЕМЫ В ТЕСТАХ!"
-    exit 1
-fi
+echo "[tests] Results: $RESULTS_FILE"
+exit $EXIT_CODE
